--- a/Open Protocol/Open Protocol.csproj
+++ b/Open Protocol/Open Protocol.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="log4net" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configuration\" />
+  </ItemGroup>
+
 </Project>
