feat : First release of V2

--- a/Open Protocol/Open Protocol.csproj
+++ b/Open Protocol/Open Protocol.csproj
@@ -15,4 +15,7 @@
     <Folder Include="Configuration\" />
   </ItemGroup>
 
+<ItemGroup>
+  <Compile Remove="OldStuff\**\*.cs" />
+</ItemGroup>
 </Project>
